@@ -3,6 +3,7 @@ import WordPressUI
 import WordPressReader
 import Gravatar
 import Combine
+import SwiftUI
 
 final class CommentContentTableViewCell: UITableViewCell, NibReusable {
     // all the available images for the accessory button.
@@ -64,6 +65,7 @@ final class CommentContentTableViewCell: UITableViewCell, NibReusable {
     }
 
     // MARK: Outlets
+    @IBOutlet private weak var headerView: UIView!
 
     @IBOutlet private weak var containerStackView: UIStackView!
     @IBOutlet private weak var containerStackLeadingConstraint: NSLayoutConstraint!
@@ -109,7 +111,7 @@ final class CommentContentTableViewCell: UITableViewCell, NibReusable {
 
     // MARK: Visibility Control
 
-    private var isAccessoryButtonEnabled: Bool = false {
+    var isAccessoryButtonEnabled: Bool = false {
         didSet {
             accessoryButton.isHidden = !isAccessoryButtonEnabled
         }
@@ -137,6 +139,7 @@ final class CommentContentTableViewCell: UITableViewCell, NibReusable {
 
     override func awakeFromNib() {
         super.awakeFromNib()
+
         configureViews()
     }
 
@@ -194,12 +197,18 @@ final class CommentContentTableViewCell: UITableViewCell, NibReusable {
         isAccessoryButtonEnabled = false
     }
 
+    func configureForCommentDetails() {
+        containerStackView.isLayoutMarginsRelativeArrangement = true
+        containerStackView.layoutMargins = UIEdgeInsets(.vertical, 4)
+    }
+
     private func configure(with state: CommentCellViewModel.State) {
         nameLabel.text = state.title
         dateLabel.text = state.dateCreated?.toMediumString()
 
         replyButton.isHidden = !state.isReplyEnabled
         likeButton.isHidden = !state.isLikeEnabled
+        likeButton?.configuration?.contentInsets.leading = state.isReplyEnabled ? 8 : 0
 
         updateLikeButton(isLiked: state.isLiked, likeCount: state.likeCount)
     }
@@ -307,6 +316,8 @@ private extension CommentContentTableViewCell {
     // assign base styles for all the cell components.
     func configureViews() {
         selectionStyle = .none
+
+        headerView.addGestureRecognizer(UITapGestureRecognizer(target: self, action: #selector(headerTapped)))
 
         nameLabel?.font = style.nameFont
         nameLabel?.textColor = style.nameTextColor
@@ -432,6 +443,20 @@ private extension CommentContentTableViewCell {
     }
 
     // MARK: Button Actions
+
+    @objc private func headerTapped() {
+        guard let comment = viewModel?.comment else {
+            return
+        }
+        let viewModel = ReaderUserProfileViewModel(comment: comment)
+        let profileVC = UIHostingController(rootView: ReaderUserProfileView(viewModel: viewModel))
+        let navigationVC = UINavigationController(rootViewController: profileVC)
+        profileVC.navigationItem.leftBarButtonItem = UIBarButtonItem(systemItem: .close, primaryAction: .init { [weak profileVC] _ in
+            profileVC?.presentingViewController?.dismiss(animated: true)
+        })
+        navigationVC.sheetPresentationController?.detents = [.medium()]
+        UIViewController.topViewController?.present(navigationVC, animated: true)
+    }
 
     @objc func accessoryButtonTapped() {
         accessoryButtonAction?(accessoryButton)
